--- a/biology.html
+++ b/biology.html
@@ -29,8 +29,8 @@
             <div class="row">
                 <div class="column">
                     <h3><b>SEM 1</b></h3>
-                    <p><a href="#"target="_blank">CHAPTER 1 : MOLECULES OF LIFE</a></p>
-                    <p><a href="#"target="_blank">CHAPTER 2 : CELL STRUCTURES AND FUNCTIONS</a></p>
+                    <p><a href="#">CHAPTER 1 : MOLECULES OF LIFE</a></p>
+                    <p><a href="#">CHAPTER 2 : CELL STRUCTURES AND FUNCTIONS</a></p>
                     <p><a href="Biology/Chapter3.pdf"target="_blank">CHAPTER 3 : CELL DIVISION</a></p>
                     <p><a href="Biology/Chapter4.pdf"target="_blank">CHAPTER 4 : GENETIC INHERITANCE</a></p>
                     <p><a href="Biology/Chapter5.pdf"target="_blank">CHAPTER 5 : EXPRESSION OF BIOLOGICAL INFORMATION</a></p>
